[package]
name = "file_cipher"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
byte_struct = "0.9.0"
clap = { version = "4.2.4", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
env_logger = "0.10.1"
log = "0.4.20"
