[package]
name = "file_cipher"
version = "1.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.70"
byte_struct = "0.9.0"
clap = { version = "4.2.4", features = ["derive"] }
clap-verbosity-flag = "2.1.1"
env_logger = "0.10.1"
log = "0.4.20"
micro-uecc-safe = { path = "micro-uecc-safe", version = "*" }
openssl = "0.10.62"
rand = "0.8.5"

[[bin]]
name = "file_cipher_cli"
path = "src/main.rs"
