[package]
name = "micro-uecc-safe"
version = "0.1.0"
authors = ["0x1306a94 <0x1306a94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.70"
micro-uecc-sys = { path = "micro-uecc-sys", version = "*"}
